Test Page : Change Font Size.

--- a/index.html
+++ b/index.html
@@ -2,17 +2,32 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <style type="text/css">
+            body {
+                font-family: sans-serif;
+                font-size: 13px;
+            }
+            
+            hr {
+                border-bottom: 1px solid #6F6F6F;
+                width: 80%;
+                margin: 20px auto;
+            }
+            
+            p {
+                font-weight: bold;
+                margin-top: 10px;
+            }
+        </style>
         <title>New IME Project</title>
     </head>
     <body>
         <div data-role="page" id="foo">
             <p>
-                New WebInput Method Test for iPad / iPhone / Android
+                Test for iPad/iPhone/Android only.
             </p>
             <div data-role="header">
-                <p>
-                    Let's touch Morse key device!
-                </p>
+                Let's touch Morse key device!
             </div>
             <div data-role="content">
                 <textarea id="input-box" rows=1 cols=36>
